# Customer-Service-Assistant-

./: .env  JustFile  README.md  config.toml  logger_config.py  pyproject.toml
bui/: __init__.py  backend.py  front.py
call_processor_modules/: __init__.py  categorize_call.py  config.yaml  pii_check.py  profanity_check.py  pydantic_models.py  required_phrases_check.py  sentiment_analysis.py  speaker.py  speaker_diarization.py  speaker_speed.py  transcription.py
project-docs/: mkdocs.yml
project-docs/docs/: architecture.md  functionality.md  index.md  lessons.md
tui/: __init__.py  tui.py
