[project]
name = "speechrecognitionproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "better-profanity>=0.7.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.8",
    "just>=0.8.162",
    "loguru>=0.7.3",
    "mkdocs-material>=9.6.5",
    "openai-whisper>=20240930",
    "pyannote-audio>=3.3.2",
    "pyaudio>=0.2.14",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "ruff>=0.9.7",
    "speechrecognition>=3.14.1",
    "streamlit>=1.42.2",
    "textblob>=0.19.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
select = ["ALL"]  # Enables all rules

